# tlab-pptx

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: .gitignore  compose.yml  create-hatch-env.sh  devcontainer.json  requirements.txt
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: release-drafter.yml  test.yml
resources/powerpoints/: add_figure.pptx  add_slide.pptx  add_text.pptx  hello_world.pptx  photo_luminescence.pptx
scripts/: format.sh  lint.sh  release.sh  test.sh
src/tlab_pptx/: __init__.py  figure.py  typing.py
src/tlab_pptx/core/: __init__.py  presentation.py  slide.py
src/tlab_pptx/pptx/: __init__.py  universal.pptx
src/tlab_pptx/presentation/: __init__.py  photo_luminescence.py
tests/: __init__.py  conftest.py  test_core_presentation.py  test_core_slide.py  test_figure.py  test_pptx.py  test_presentation_photo_luminescence.py
