[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tlab-pptx"
description = "Creates PowerPoint files for Takeuchi Lab"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
# keywords = []
# classifiers = []
dependencies = [
  "pandas~=2.1.3",
  "plotly~=5.18.0",
  "kaleido~=0.2.1, != 0.2.1.post1",
  "python-pptx~=0.6.23",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/wasedatakeuchilab/tlab-pptx"
Homepage = "https://github.com/wasedatakeuchilab/tlab-pptx"

[project.optional-dependencies]
test = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-describe==2.1.0",
  "pytest-mock==3.12.0",
]
mypy = [
  "mypy==1.7.1",
  "pandas-stubs==2.1.4.231227",
]
jupyter = [
  "ipywidgets==8.1.1",
  "jupyterlab==4.0.9",
]

[tool.hatch.version]
path = "src/tlab_pptx/__init__.py"

[tool.hatch.envs.default]
features = ["test", "mypy", "jupyter"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing:skip-covered src tests {args}"
test-doc = "pytest --doctest-modules src {args}"
check-type = "mypy src tests {args}"

[tool.hatch.envs.lint]
skip-install = true
dependencies = [
  "black==23.11.0",
  "isort==5.12.0",
  "flake8==6.1.0",
]

[tool.hatch.envs.lint.scripts]
format = [
  "isort src tests scripts",
  "black src tests scripts",
]
lint = [
  "isort --check-only src tests",
  "black --check src tests",
  "flake8 src tests",
]

[tool.hatch.envs.doc]
dependencies = []

[tool.hatch.envs.doc.scripts]

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
  "pptx.*",
  "plotly.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=tlab_pptx"
