[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tlab-pptx"
description = "Creates PowerPoint files for Takeuchi Lab"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
# keywords = []
# classifiers = []
dependencies = [
  "pandas~=2.1.4",
  "pandas-stubs~=2.1.4.231227",
  "plotly~=5.18.0",
  "kaleido~=0.2.1, != 0.2.1.post1",
  "python-pptx~=0.6.23",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/wasedatakeuchilab/tlab-pptx"
Homepage = "https://github.com/wasedatakeuchilab/tlab-pptx"
Repository = "https://github.com/wasedatakeuchilab/tlab-pptx"

[project.optional-dependencies]
test = [
  "mypy==1.8.0",
  "pytest==7.4.4",
  "pytest-cov==4.1.0",
  "pytest-describe==2.1.0",
  "pytest-mock==3.12.0",
]
jupyter = [
  "ipywidgets==8.1.1",
  "jupyterlab==4.1.1",
]

[tool.hatch.version]
path = "src/tlab_pptx/__init__.py"

[tool.hatch.envs.default]
features = ["test", "jupyter"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing:skip-covered src tests {args}"
test-doc = "pytest --doctest-modules src {args}"
check-type = "mypy src tests {args}"

[tool.hatch.envs.doc]
dependencies = []

[tool.hatch.envs.doc.scripts]

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
  "pptx.*",
  "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=tlab_pptx"

[tool.ruff]
select = [
  "E",
  "F",
  "W",
  "I",
]
